--- a/models/project.json5
+++ b/models/project.json5
@@ -4,6 +4,12 @@
   "oneLiner": "Describe your project in one sentence", // [String] Short description (max 80 chars)
   "description": "Detailed description of your project...", // [String] Detailed project description (max 2048 chars)
   "category": "dao", // [String||Constraints>ProjectCategory] // Project category
+  "walletAddresses": [
+    {
+      "network": "ethereum", // [String||Constraints>Networks] Network of the wallet
+      "address": "0xe6e3459ba0d70699f54464cc4b5d273810e7ec7b" // [String] Hex address of the wallet
+    }
+  ],
   "links": {
     "<target>": "https://target.tld" // [String||Constraints>Links] Object containing links to target websites
   },
@@ -18,5 +24,4 @@
       "background": "CTO of Pearl", // [String] Background / work experience
     }
   ],
-  "proposals": [] // [Array[Proposal]] Array of proposals. See proposal structure
 }
