--- a/models/proposal.json5
+++ b/models/proposal.json5
@@ -2,7 +2,7 @@
   // [Data Type] Comment
   "protocolVersion": 1, // [Integer] Version of the open-proposal-standard
   "title": "A very cool proposal", // [String] Name of your proposal (max 128 chars)
-  "round": 12, // [Integer] Number of funding round
+  "round": 12, // [Integer] Number of funding round you are applying to
   "walletAddress": {
     "network": "ethereum", // [String||Constraints>Networks] Network of the wallet
     "address": "0xe6e3459ba0d70699f54464cc4b5d273810e7ec7b" // [String] Hex address of the wallet
